--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>Git Working Together</title>
     </head>
     <body>
-        Hello World!
+        Hi! My Name Is...
     </body>
 </html>
