--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <body>
         Hi! My Name Is...
 
-
-    Hello!! This is Aly.
+        <p>Bradon Fact: He works in the music industry</p>
     </body>
 </html>
