--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <body>
         Hi! My Name Is...
 
-        <p>Bradon Fact: He works in the music industry</p>
+        <p>Bradon Fact: He works in the music industry.</p>
     </body>
 </html>
