--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <body>
         Hi! My Name Is...
 
-        <p>Bradon Fact: He works in the music industry.</p>
+        Bradon Fact: He works in the music industry.
+
+        Aly Fact: I have every Damian Wayne comic.
+
     </body>
 </html>
