--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         Hi! My Name Is...
 
         <p>Bradon Fact: He works in the music industry</p>
+        <p>I beat all of the sharks underwater with no oxygen tank</p>
     </body>
 </html>
