--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Git Working Together</title>
     </head>
     <body>
-        Hi! My Name Is...
+        Hi! My Name Is...Slim Shady
 
         <p>Bradon Fact: He works in the music industry</p>
         <p>I beat all of the sharks underwater with no oxygen tank</p>
